# PoseMaster

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  start-dev.sh  start.command  tailwind.config.js
.cursor/rules/: installer-builds.mdc  project-context.mdc
.github/workflows/: build.yml
docs/: SPLIT_SCREEN_IMPLEMENTATION.md  TAB_RESTRUCTURE_IMPLEMENTATION.md
scripts/: generate-icon.mjs
src/: App.tsx  index.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sleep_prevention.rs
src/components/: DownloadProgressModal.tsx  DrawingCanvas.tsx  DrawingDataOverlay.tsx  ExportOptionsModal.tsx  FolderPicker.tsx  FreeDrawCanvas.tsx  GuidelineOverlay.tsx  ImageViewer.tsx  ModeSelection.tsx  PrebuiltPresetTile.tsx  PreviousSessions.tsx  SavePresetDialog.tsx  SaveSessionModal.tsx  SavedSessionCard.tsx  SessionGallery.tsx  SessionSetup.tsx  SessionSummary.tsx  SessionView.tsx  SplashScreen.tsx  TabNav.tsx  Timer.tsx  TimerPresets.tsx  Toolbar.tsx  UserPresetCard.tsx
src/store/: drawingStore.ts  presetsStore.ts  savedSessionsStore.ts  sessionStore.ts  settingsStore.ts
src/utils/: urlListParser.ts
